--- a/AlexandrPeers/002-Wikimedium/index.html
+++ b/AlexandrPeers/002-Wikimedium/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
 
+
+
   <nav>
+    <div id="menuIcon">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+
     <ul>
       <li>
         <a class="scrollTo" href="#welcomeScreen">Дом Наркомфина</a></li>
